# MetaParser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/: CMakeLists.txt  PreCompiled.h  main.cpp
Core/Header/: Class.h  Cursor.h  CursorType.h  MetaDataConfig.h  MetaDataManager.h  MetaUtils.h  ModuleFile.h  ReflectionOptions.h  ReflectionParser.h  Tokenizer.hpp
Core/Source/: Class.cpp  Cursor.cpp  CursorType.cpp  Field.cpp  LanguageType.cpp  MetaDataManager.cpp  MetaUtils.cpp  ReflectionParser.cpp
Source/MetaParser/: CMakeLists.txt  main.cpp
Source/MetaParser/Header/: Class.h  MetaUtils.h  Method.h  ReflectionParser.h  Templates.h
Source/MetaParser/Source/: Class.cpp  Field.cpp  MetaDataManager.cpp  MetaUtils.cpp  Method.cpp  ReflectionParser.cpp
Source/MetaParser/test/: Test.h
Source/Resources/Templates/: module-file-header.mustache  module-file-source.mustache  module-source.mustache
Source/Test/: CMakeLists.txt  PreCompiled.h  main.cpp
Source/Test/Header/: Control.h  Item.h  Range.h  Reflection.h  Slider.h
Source/Test/Header/Shader/: Shader.h
Source/Test/Header/UI/: Font.h  PixelImGui.h
Source/Test/Resource/: shader.fs  shader.vs  ui.fs  ui.vs
Source/Test/Source/: Control.cpp  Item.cpp  Range.cpp  Slider.cpp  glad.cpp
Source/Test/Source/UI/: PixelImGui.cpp
Source/cmake/: MetaParser.cmake
Source/glad/include/glad/: glad.h
Source/glad/src/: glad.c
